corrección en la query de EstadisticaRepository y mejoras de validacion en el GlobalExceptionHandler